# BasicsTetris

./: .gitignore  CMakeLists.txt  GameState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  States.cpp  TetrisMenu.cpp  main.cpp  mainOld.cpp  playState.cpp
code/: GameOverState.cpp  GameState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  TetrisMenu (2).cpp  TetrisMenu (3).cpp  TetrisMenu (4).cpp  TetrisMenu (5).cpp  TetrisMenu.cpp
include/glad/: glad.h
src/: Game.h  Menu.cpp  Menu.h  MenuState.h  States.h  TetrisMenu.cpp  TetrisMenu.h  TetrisMenu1.h  glad.c  main.cpp  main.h  playState.h
src/Code/: PlayState.cpp  TetrisMenu.cpp
